# libcirclewire

./: .gitignore  LICENSE  Makefile.am  README.md  configure.ac
doc/: arc.wxmx  arc_properties.wxmx
include/: Makefile.am  libcirclewire.h
lib/: Makefile.am  bound.c  cut.c  decomp.c  hull.c  prop.c  solid.c  str.c  str.h  svg.c  svg_parse.c  util.c  util.h  vatti.c  vatti.h  wire.c  wire.h
test/: Makefile.am  arc.FCStd  circlewire_test.c
